--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "chart.js": "^2.9.3",
-    "mapbox-gl": "^1.8.1",
+    "leaflet": "^1.6.0",
     "react": "^16.13.0",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.0",
-    "react-map-gl": "^5.2.3",
+    "react-leaflet": "^2.6.3",
     "react-scripts": "3.4.0"
   },
   "scripts": {
