--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
     "flickity": "^2.2.1",
+    "i18next": "^19.3.4",
+    "i18next-browser-languagedetector": "^4.0.2",
+    "i18next-xhr-backend": "^3.2.2",
     "leaflet": "^1.6.0",
     "react": "^16.13.0",
     "react-chartjs-2": "^2.9.0",
     "react-cookie": "^4.0.3",
     "react-dom": "^16.13.0",
     "react-flickity-component": "^3.5.0",
+    "react-i18next": "^11.3.4",
     "react-leaflet": "^2.6.3",
     "react-modal": "^3.11.2",
     "react-odometerjs": "^2.1.1",
