Added Google Analytics

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-cookie": "^4.0.3",
     "react-dom": "^16.13.0",
     "react-flickity-component": "^3.5.0",
+    "react-ga": "^2.7.0",
     "react-i18next": "^11.3.4",
     "react-leaflet": "^2.6.3",
     "react-modal": "^3.11.2",
