--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "covid19",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://dglcsgaming.github.io/covid19-dz",
+  "homepage": "https://dglcsgaming.github.io",
   "dependencies": {
     "@svgr/webpack": "^5.3.1",
     "@testing-library/jest-dom": "^4.2.4",
